뷰와 연결테스트

--- a/.dbeaver/project-metadata.json
+++ b/.dbeaver/project-metadata.json
@@ -1,1 +1,1 @@
-{"resources":{"ERD/NMJ_DBTable.sql":{"sql-editor-data-source-id":"mariaDB-174a58854a8-2f72d3986f5b8065"}}}
+{"resources":{"ERD/DBTable.sql":{"sql-editor-data-source-id":"mariaDB-174a58854a8-2f72d3986f5b8065"},"ERD/NMJ_DBTable.sql":{"sql-editor-data-source-id":"mariaDB-174a58854a8-2f72d3986f5b8065"}}}
